after login greet  the user with name

--- a/front end/bas_world_design/src/pages/styles.css
+++ b/front end/bas_world_design/src/pages/styles.css
@@ -75,3 +75,7 @@ input[type="submit"]:hover {
     margin-bottom: 2rem;
     cursor: pointer;
 }
+.logoutButton{
+    position: absolute;
+    right: 15px;
+}
