--- a/front end/bas_world_design/src/pages/App.css
+++ b/front end/bas_world_design/src/pages/App.css
@@ -127,3 +127,47 @@
     color: black;
     background-color: coral;
 }
+
+
+.textPrimary {
+    color: #406d49;
+    text-align: center;
+    font-size: 3.5rem;
+}
+
+.gridContainer {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+  }
+  
+  .gridContainer > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .formBtn {
+    width: 80%;
+    margin-left: 10%;
+    display: inline-flex;
+    padding: 1rem 3rem;
+    border: medium;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    background: #804f2a;
+    color: #fff;
+    margin-bottom: 2rem;
+    cursor: pointer;
+}
+
+.textDecore {
+    color: #36486b;
+    font-weight: bold;
+    font-size: 2.3rem;
+    text-align: center;
+  }
+  
