for backend some cleaning up and new exception classes for fronend:some warnings are fixed, some cleanup,unused code cleared, navigation fixed minor design changes for login and signup

--- a/front end/bas_world_design/src/pages/App.css
+++ b/front end/bas_world_design/src/pages/App.css
@@ -170,4 +170,10 @@
     font-size: 2.3rem;
     text-align: center;
   }
+
+  .navbar {
+    position: absolute;
+    right: 2%;
+    top: 3.5%;
+  }
   
