design of the admin page is modified, the messages is displayed in the left side of the page and the chat is in the middle

--- a/front end/bas_world_design/src/pages/App.css
+++ b/front end/bas_world_design/src/pages/App.css
@@ -135,39 +135,66 @@
     font-size: 3.5rem;
 }
 
-.gridContainer {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 10px;
-    background-color: #2196F3;
-    padding: 10px;
+header {
+    grid-area: header;
+    background-color: #eef4f0;
+    padding: 20px;
   }
-  
-  .gridContainer > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid black;
-    text-align: center;
-    font-size: 30px;
+  article {
+    grid-area: content;
+    background-color: #a6baaf;
+    padding: 20px;
+  }
+  aside {
+    grid-area: sidebar;
+    background-color: #57816d;
+  }
+  footer {
+    padding: 20px;
+    grid-area: footer;
+    background-color: #cdc6c1;
+  }
+  .wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 3fr;
+    grid-template-areas: 
+      "header  header"
+      "sidebar content"
+      "footer  footer";
+  }
+  @media (max-width: 500px) {
+    .wrapper {
+      grid-template-columns: 4fr;
+      grid-template-areas:
+        "header"
+        "content"
+        "sidebar"
+        "footer";
+    }
   }
 
   .formBtn {
-    width: 80%;
+    width: 60%;
     margin-left: 10%;
     display: inline-flex;
-    padding: 1rem 3rem;
+    padding: 0.5rem 2rem;
     border: medium;
     border-radius: 5px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     background: #804f2a;
     color: #fff;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     cursor: pointer;
+}
+.formBtn:hover{
+    background-color: #7a6454;
 }
 
 .textDecore {
     color: #36486b;
     font-weight: bold;
-    font-size: 2.3rem;
+    font-size: 1.1rem;
     text-align: center;
   }
 
@@ -177,3 +204,47 @@
     top: 3.5%;
   }
   
+  
+  .container {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+  }
+  
+  .darker {
+    border-color: #ccc;
+    background-color: #ddd;
+  }
+  
+  .container::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
