mostly UI changes

--- a/front end/bas_world_design/src/pages/styles.css
+++ b/front end/bas_world_design/src/pages/styles.css
@@ -36,6 +36,7 @@ input[type="submit"]:hover {
 }
 
 .login-form {
+    color: black;
     background-color: white;
     padding: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -87,4 +88,7 @@ input[type="submit"]:hover {
 .navigateLink:hover{
     font-size: 27px;
     font-weight: bold;
+}
+.wrapper{
+
 }
