--- a/front end/bas_world_design/src/Components/ChatComponent.css
+++ b/front end/bas_world_design/src/Components/ChatComponent.css
@@ -1,59 +1,60 @@
-.chat-conteiner {
+.chat-component {
     display: flex;
     flex-direction: column;
     height: 100%;
     right: 0;
     position: fixed;
+
 }
-  
+
 
 
 .chat-section {
-  position: relative;
-  height: 80%;
+    position: relative;
+    height: 80%;
 }
-  
+
 .chat-message {
     background-color: #f1f1f1;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
     padding: 20px;
-  }
+}
 
 
 
-  
-  
+
+
 
 .chat-messages {
     max-height: 86.5%;
 
 }
 
-  
+
 .chat-messages li {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 20px;  
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px;
 }
 
-  
+
 .message-data {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 20px;
 }
-  
+
 .message-data div {
     background-color: #f1f1f1;
     padding: 10px;
     border-radius: 5px;
     font-size: 16px;
 }
-  
+
 .chat-input {
     display: flex;
     justify-content: space-between;
@@ -61,7 +62,7 @@
     padding: 20px;
     background-color: #f1f1f1;
 }
-  
+
 .chat-input input {
     flex: 1;
     padding: 10px;
@@ -69,7 +70,7 @@
     border-radius: 5px 0 0 5px;
     font-size: 16px;
 }
-  
+
 .chat-input button {
     padding: 10px;
     border: none;
@@ -81,12 +82,23 @@
 }
 
 ul.chat-messages {
+    color: black;
     position: absolute;
     bottom: 0;
     width: 100%;
     overflow-y: scroll;
     scrollbar-width: none;
 }
+
+.chat-messages{
+    height: 80%;
+    border: 1px solid #000;
+}
+
+
+
+
+
 
 
 
